Fixed some spelling mistakes

--- a/Project 7- Analyizing NYC Sat Scores/Project 7.ipynb
+++ b/Project 7- Analyizing NYC Sat Scores/Project 7.ipynb
@@ -330,7 +330,7 @@
    "metadata": {},
    "source": [
     "# Insights on some correlations\r\n",
-    "Looking at the most survey field with the most negative correlation, which is saf_p_11 (Safety and Respect score) seems to show that having a higher score of that tends to have lower sat scores from that school, albeit the strength of the r-value is very weak. The strongest r-values coem from N_s and N_p (number of student and parent respondents). This seems to show that schools that have more students respondents tend to have  higher sat scores, which makes sense since you are more likely to respond this type of survey if you're doing well academically.  "
+    "Looking at the most survey field with the most negative correlation, which is saf_p_11 (Safety and Respect score) seems to show that having a higher score of that tends to have lower sat scores from that school, albeit the strength of the r-value is very weak. The strongest r-values come from N_s and N_p (number of student and parent respondents). This seems to show that schools that have more students respondents tend to have  higher sat scores, which makes sense since you are more likely to respond this type of survey if you're doing well academically.  "
    ]
   },
   {
@@ -378,7 +378,7 @@
    "metadata": {},
    "source": [
     "# Scatter findings\r\n",
-    "From above, we can see the positive trend of higher SAT scores as the students preception of school safety goes up."
+    "From above, we can see the positive trend of higher SAT scores as the students perception of school safety goes up."
    ]
   },
   {
