--- a/Project 9- Factbook Population SQL/FactbookSQL.ipynb
+++ b/Project 9- Factbook Population SQL/FactbookSQL.ipynb
@@ -191,7 +191,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
-    "#Finding the countries with the most and mininum number of people, same with population growth\r\n",
+    "#Finding the countries with the most and least number of people, same with population growth\r\n",
     "%%sql\r\n",
     "SELECT MIN(population),\r\n",
     "       MAX(population),\r\n",
@@ -379,7 +379,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "source": [
-    "#Finding the average amount of populatin and area for each country\r\n",
+    "#Finding the average amount of population and area for each country\r\n",
     "%%sql\r\n",
     "SELECT AVG(population) as average_population,\r\n",
     "       AVG(area) as average_area\r\n",
